test/tests/packages/lets/unknown_binding.txt
error: package binding `letspkg::$nonexistent` not found
 --> tests/packages/lets/unknown_binding.tql:5:10
  |
5 | from {x: letspkg::$nonexistent}
  |          ^^^^^^^^^^^^^^^^^^^^^ 
  |
